refactored all classes for clarity